Fix twitter social fields alignment on listing detail view

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -281,12 +281,16 @@ form#wpbdmsearchform a.advanced-search-link {
 
         &.twitter {
             display: inline-block;
-            vertical-align: text-top;
             height: 20px;
             margin-right: 10px;
 
             iframe {
                 margin-bottom: 0;
+            }
+
+            &.twitter-handle {
+                vertical-align: text-top;
+                padding-top: 5px;
             }
         }
 
@@ -946,6 +950,7 @@ body.business-directory #TB_secondLine {
 
 .wpbdp-main-links .button {
     margin: 0 5px;
+    font-size: 15px;
 }
 .wpbdp-main-links .button:first-child {
     margin-left: 0;
@@ -1161,7 +1166,7 @@ body.business-directory #TB_secondLine {
 }
 
 .wpbdp-wp-theme-twentytwenty {
-    .wpbdp-main-links .button,
+    .wpbdp-main-links .wpbdp-button,
     .box-col.submit-btn input,
     .listing-actions {
         font-size: 1.5rem;
